DDI-Lifecycle/3.2/model/_sources/composite-types/NumericDomainType/index.rst.txt
NumericDomainType
-----------------

A response domain capturing a numeric response (the intent is to analyze the response as a number) for a question. Contains the equivalent content of a NumericRepresentation including the numeric range, numeric type code, format, scale, decimal position, and interval. Adds a set of elements available to all Response Domains; Label, Description, OutParameter, designation of response cardinality, and a declaration of an offset date for the data content. Has an equivalent NumericDomainReference which references a ManagedNumericRepresentation.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "Label",":doc:`/composite-types/LabelType/index`","0..n","A display label for the domain. May be expressed in multiple languages. Repeat for labels with different content, for example, labels with differing length limitations."
   "Description",":doc:`/composite-types/StructuredStringType/index`","0..1","A description of the content and purpose of the domain. May be expressed in multiple languages and supports the use of structured content."
   "OutParameter",":doc:`/composite-types/ParameterType/index`","0..1","Allows for the response to be bound to one of the QuestionItem's OutParameters, so the collected information can be used elsewhere, for example as inputs to subsequent questions in an Instrument or to a GenerationInstruction. If multiple responses are possible, this would represent and ordered array of the responses."
   "ResponseCardinality",":doc:`/composite-types/ResponseCardinalityType/index`","0..1","Allows the designation of the minimum and maximum number of responses allowed for this response domain."
   "ContentDateOffset",":doc:`/composite-types/ContentDateOffsetType/index`","0..1","Identifies the difference between the date applied to the data as a whole and this specific item such as previous year's income or residence 5 years ago."

Properties Inherited from NumericRepresentationBaseType
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "NumberRange",":doc:`/composite-types/NumberRangeType/index`","0..n","Defines the valid number range or number values for the representation."
   "NumericTypeCode",":doc:`/composite-types/CodeValueType/index`","0..1","Identification of the numeric type such as integer, decimal, etc. supports the use of an external controlled vocabulary."
   "Format","string","0..1","A format for number expressed as a string."
   "Scale","int","0..1","The scale of the number expressed as an integer (for example a number expressed in 100's, 5 = 500 would have a scale of 100)."
   "DecimalPositions","int","0..1","The number of decimal positions expressed as an integer (precision of the number)."
   "Interval","int","0..1","The interval between valid responses expressed as an integer."

Properties Inherited from RepresentationType
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "RecommendedDataType",":doc:`/composite-types/CodeValueType/index`","0..1","This field provides the recommended treatment of the data within an application. The value should come from a controlled vocabulary - recommended values include the set found in W3C XML Schema Part 2, but excluding string sub-types, QNAME, and NOTATION."
   "GenericOutputFormat",":doc:`/composite-types/CodeValueType/index`","0..1","This field provides a recommended generic treatment of the data for display by an application. The value should come from a controlled vocabulary."
   "MissingValue","string","0..1","List the values used to represent missing data in a space delimited array. Use of MissingValuesReference is preferred. If this content does not match the values provided in the MissingValuesReference, the content of the MissingValuesReference overrides the content of this attribute."
   "BlankIsMissingValue","boolean","0..1","When value is true a blank or empty variable content should be treated as a missing value.  Use of MissingValuesReference is preferred."
   "ClassificationLevel","string","0..1","Indicates the type of relationship, nominal, ordinal, interval, ratio, or continuous. Use where appropriate for the representation type."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* :doc:`/composite-types/RepresentationType/index`
    * :doc:`/composite-types/NumericRepresentationBaseType/index`
        * **NumericDomainType**


Relationships
~~~~~~~~~~~~~


.. container:: image

   |stub|

.. |stub| image:: ../../images/NumericDomainType.svg

